--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="my-work-experience">
           <h3 class="projects-work-education">Work Experience</h3>
           <!--Company 3-->
-          <div>
+          <!-- <div>
             <h4>Front-End Developer <span class="Orange">Freelance</span></h4>
             <p class="work-date">
               September 2019 - up to now
@@ -225,62 +225,7 @@
                 >
               </li>
             </ul>
-          </div>
-
-          <!--Company 2-->
-          <div>
-            <h4>Manager <span class="Orange">Roga & Kopyta New</span></h4>
-            <p class="work-date">
-              March 2015 - October 2018
-              <span class="vertical-line"> |</span> Country
-            </p>
-
-            <ul class="work-list">
-              <li class="work-list-item">
-                <span class="work-list-item-text"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod labore et dolore magna aliqua.</span
-                >
-              </li>
-              <li class="work-list-item">
-                <span class="work-list-item-text"
-                  >Quis ipsum suspendisse ultrices gravida.</span
-                >
-              </li>
-              <li class="work-list-item">
-                <span class="work-list-item-text">
-                  Risus commodo viverra maecenas.</span
-                >
-              </li>
-            </ul>
-          </div>
-          <!--Company 1-->
-          <div>
-            <h4>Manager <span class="Orange"> Roga & Kopyta LLC</span></h4>
-            <p class="work-date">
-              June 2014 - February 2015
-              <span class="vertical-line"> |</span> Country
-            </p>
-
-            <ul class="work-list">
-              <li class="work-list-item">
-                <span class="work-list-item-text"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit.</span
-                >
-              </li>
-              <li class="work-list-item">
-                <span class="work-list-item-text"
-                  >Quis ipsum suspendisse ultrices gravida.</span
-                >
-              </li>
-              <li class="work-list-item">
-                <span class="work-list-item-text">
-                  Risus commodo viverra maecenas.</span
-                >
-              </li>
-            </ul>
-          </div>
+          </div> -->
           <!--Education-->
           <div class="my-education">
             <h3 class="projects-work-education">Education</h3>
