--- a/index.html
+++ b/index.html
@@ -192,40 +192,44 @@
         <div class="my-work-experience">
           <h3 class="projects-work-education">Work Experience</h3>
           <!--Company 3-->
-          <!-- <div>
-            <h4>Front-End Developer <span class="Orange">Freelance</span></h4>
+          <div>
+            <h4>Waiter <span class="Orange">Restaurant 'SHO PO CHEM'</span></h4>
             <p class="work-date">
-              September 2019 - up to now
-              <span class="vertical-line"> |</span> Country
+              June 2019 - September 2019
+              <span class="vertical-line"> |</span> Country Ukraine
             </p>
 
             <ul class="work-list">
               <li class="work-list-item">
                 <span class="work-list-item-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna
-                  aliqua.</span
-                >
+                  Taking orders from visitors
+                </span>
               </li>
               <li class="work-list-item">
-                <span class="work-list-item-text"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit.</span
-                >
+                <span class="work-list-item-text">Customer service</span>
               </li>
+            </ul>
+            <h4>
+              Web-site editor <span class="Orange">Svet-LED Company</span>
+            </h4>
+            <p class="work-date">
+              September 2019 - January 2019
+              <span class="vertical-line"> |</span> Country Ukraine
+            </p>
+
+            <ul class="work-list">
               <li class="work-list-item">
                 <span class="work-list-item-text">
-                  Risus commodo viverra maecenas.</span
-                >
+                  Editing the list of products on the site
+                </span>
               </li>
               <li class="work-list-item">
                 <span class="work-list-item-text"
-                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod</span
+                  >Products information update</span
                 >
               </li>
             </ul>
-          </div> -->
+          </div>
           <!--Education-->
           <div class="my-education">
             <h3 class="projects-work-education">Education</h3>
@@ -319,16 +323,22 @@
             <h3 class="sidebar-title">Soft Skills</h3>
             <ul class="Soft-skills-list">
               <li class="Soft-skills-item">
-                <span class="Soft-skills-item-text">Scrum</span>
-              </li>
-              <li class="Soft-skills-item">
-                <span class="Soft-skills-item-text">Agile</span>
-              </li>
-              <li class="Soft-skills-item">
-                <span class="Soft-skills-item-text">GTD</span>
+                <span class="Soft-skills-item-text">Communication</span>
               </li>
               <li class="Soft-skills-item">
                 <span class="Soft-skills-item-text">Teamwork</span>
+              </li>
+              <li class="Soft-skills-item">
+                <span class="Soft-skills-item-text">Decision-making</span>
+              </li>
+              <li class="Soft-skills-item">
+                <span class="Soft-skills-item-text">Leadership</span>
+              </li>
+              <li class="Soft-skills-item">
+                <span class="Soft-skills-item-text">Creativity</span>
+              </li>
+              <li class="Soft-skills-item">
+                <span class="Soft-skills-item-text">Stress management</span>
               </li>
             </ul>
           </div>
