--- a/index.html
+++ b/index.html
@@ -39,8 +39,38 @@
               <span class="projects-list-item-text">
                 <a
                   target="_blank"
+                  href="https://rds-phonebookapp-rds.netlify.app/"
+                  >'PHONEBOOK' web-app</a
+                >
+              </span>
+              <span class="lines">..............</span>
+              <span
+                >[<span class="projects-list-item-text">
+                  HTML5, CSS3, SCSS, JavaScript </span
+                >]</span
+              >
+            </li>
+            <li class="projects-list-item">
+              <span class="projects-list-item-text">
+                <a
+                  target="_blank"
                   href="https://dmitri-rudomanov.github.io/group-6-team-project-JS/"
                   >'FILMOTEKA' web-site</a
+                >
+              </span>
+              <span class="lines">..............</span>
+              <span
+                >[<span class="projects-list-item-text">
+                  HTML5, CSS3, SCSS, JavaScript </span
+                >]</span
+              >
+            </li>
+            <li class="projects-list-item">
+              <span class="projects-list-item-text">
+                <a
+                  target="_blank"
+                  href="https://dmitri-rudomanov.github.io/goit-markup-hw-08-1/"
+                  >'WebStudio' web-site</a
                 >
               </span>
               <span class="lines">..............</span>
@@ -314,7 +344,10 @@
                 <span class="Tech-skills-item-text">WebPack</span>
               </li>
               <li class="Tech-skills-item">
-                <span class="Tech-skills-item-text">React.js</span>
+                <span class="Tech-skills-item-text">React</span>
+              </li>
+              <li class="Tech-skills-item">
+                <span class="Tech-skills-item-text">Redux</span>
               </li>
             </ul>
           </div>
