--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <span class="lines">..............</span>
               <span
                 >[<span class="projects-list-item-text">
-                  HTML5, CSS3, SCSS, JavaScript </span
+                  HTML5, CSS3, JavaScript,React,Redux </span
                 >]</span
               >
             </li>
