--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
         <!--My projects section-->
 
         <div class="my-projects">
-          <h3 class="projects-work-education">Projects</h3>
+          <h3 class="projects-work-education">Project Experience</h3>
           <ol class="projects-list">
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                PHONEBOOK
                 <a
                   target="_blank"
                   href="https://rds-phonebookapp-rds.netlify.app/"
-                  >'PHONEBOOK' web-app</a
+                  >Link</a
                 >
               </span>
               <span class="lines">..............</span>
@@ -49,6 +50,11 @@
                   HTML5, CSS3, JavaScript,React,Redux </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                My solo React-Redux project.Simple but user friendly Pnonebook
+                App
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
@@ -289,13 +295,11 @@
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
           <div>
-            <span class="contacts-section-type">Contacts:</span>
             <a class="contacts-section-link" href="tel:+380974335970"
               >+380974335970</a
             >
           </div>
           <div>
-            <span class="contacts-section-type">Email:</span>
             <a
               class="contacts-section-link"
               href="mailto:rudomanovdmitrij@gmail.com"
@@ -303,7 +307,6 @@
             >
           </div>
           <div>
-            <span class="contacts-section-type">LinkedIn:</span>
             <a
               class="contacts-section-link"
               target="_blank"
@@ -312,7 +315,6 @@
             >
           </div>
           <div>
-            <span class="contacts-section-type">GIT:</span>
             <a
               class="contacts-section-link"
               target="_blank"
@@ -379,10 +381,10 @@
             <h3 class="sidebar-title">Language Skills</h3>
             <ul class="Soft-skills-list">
               <li class="Soft-skills-item">
-                <span class="Soft-skills-item-text">Russian : NATIVE</span>
+                <span class="Soft-skills-item-text">Russian : Native</span>
               </li>
               <li class="Soft-skills-item">
-                <span class="Soft-skills-item-text">Ukrainian : NATIVE</span>
+                <span class="Soft-skills-item-text">Ukrainian : Native</span>
               </li>
               <li class="Soft-skills-item">
                 <span class="Soft-skills-item-text"
