--- a/index.html
+++ b/index.html
@@ -37,31 +37,32 @@
           <ol class="projects-list">
             <li class="projects-list-item">
               <span class="projects-list-item-text">
-                PHONEBOOK
+                <a target="_blank" href="https://rds-phonebookapp-rds.netlify.app/">PHONEBOOK</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://rds-phonebookapp-rds.netlify.app/"
-                  >Link</a
+                  href="https://github.com/Dmitri-Rudomanov/goit-react-hw-08-phonebook"
+                  > Project Link</a
                 >
               </span>
-              <span class="lines">..............</span>
-              <span
-                >[<span class="projects-list-item-text">
-                  HTML5, CSS3, JavaScript,React,Redux </span
+              <span class="lines">............</span>
+              <span>[<span class="projects-list-item-text">
+              HTML5, CSS3, JavaScript,React,Redux </span
                 >]</span
               >
               <br />
               <span class="projects-list-item-text">
-                My solo React-Redux project.Simple but user friendly Pnonebook
-                App
+                Solo React-Redux project.Simple user friendly Pnonebook App
               </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/group-6-team-project-JS/">FILMOTEKA</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/group-6-team-project-JS/"
-                  >'FILMOTEKA' web-site</a
+                  href="https://github.com/Dmitri-Rudomanov/group-6-team-project-JS"
+                  > Project Link</a
                 >
               </span>
               <span class="lines">..............</span>
@@ -70,13 +71,39 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                JS team project with me as Teamlead. Movie site easy to use
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/goit-markup-hw-08-1/">WEBSTUDIO</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/goit-markup-hw-08-1/"
-                  >'WebStudio' web-site</a
+                  href="https://github.com/Dmitri-Rudomanov/goit-markup-hw-08"
+                  > Project Link</a
+                >
+              </span>
+              <span class="lines">..............</span>
+              <span
+                >[<span class="projects-list-item-text"> HTML5, CSS3, SCSS</span
+                >]</span
+              >
+              <br />
+              <span class="projects-list-item-text">
+                Educational markup project.Simple and Interactive
+              </span>
+            </li>
+            <li class="projects-list-item">
+              <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/group-9-icecream/">ICECREAM</a>
+                <span class="vertical-line"> |</span>
+                <a
+                  target="_blank"
+                  href="https://github.com/Dmitri-Rudomanov/group-9-icecream"
+                  >Project Link</a
                 >
               </span>
               <span class="lines">..............</span>
@@ -85,28 +112,21 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
-            </li>
-            <li class="projects-list-item">
+              <br />
               <span class="projects-list-item-text">
-                <a
-                  target="_blank"
-                  href="https://dmitri-rudomanov.github.io/group-9-icecream/"
-                  >'ICECREAM' web-site</a
-                >
+                Team project.IceCream selling web-site.Role:Developer,Code
+                reviewer
               </span>
-              <span class="lines">..............</span>
-              <span
-                >[<span class="projects-list-item-text">
-                  HTML5, CSS3, SCSS, JavaScript </span
-                >]</span
-              >
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/dist-wooder/">WOODER</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/dist-wooder/"
-                  >'WOODER' web-site</a
+                  href="https://github.com/Dmitri-Rudomanov/dist-wooder"
+                >
+                  Project Link</a
                 >
               </span>
               <span class="lines">..............</span>
@@ -115,13 +135,20 @@
                   HTML5, CSS3, SCSS </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                Building an interesting landing website for wood furniture
+                company
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/dist-ofdr/">OFDR</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/dist-ofdr/"
-                  >'OFDR' Insurance web-site</a
+                  href="https://github.com/Dmitri-Rudomanov/dist-ofdr"
+                  >Project Link</a
                 >
               </span>
               <span class="lines">..............</span>
@@ -130,13 +157,20 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                Web-site for insurance companie.
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://peaceful-albattani-0fdbcf.netlify.app/">FUNIRO</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://peaceful-albattani-0fdbcf.netlify.app/"
-                  >'FUNIRO' web-store
+                  href="https://github.com/Dmitri-Rudomanov/funiro-dist"
+                >
+                  Project Link
                 </a>
               </span>
               <span class="lines">..............</span>
@@ -145,13 +179,20 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                A modern web-store that sels best quality furniture
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://jolly-raman-a3cb91.netlify.app/">LOGO</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://jolly-raman-a3cb91.netlify.app/"
-                  >'LOGO' sport web-store
+                  href="https://github.com/Dmitri-Rudomanov/logo-dist"
+                >
+                  Project Link
                 </a>
               </span>
               <span class="lines">..............</span>
@@ -160,13 +201,20 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                Website for online Sport-shop
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/bentley-dist/">BENTLEY</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/bentley-dist/"
-                  >'BENTLEY' web-site
+                  href="https://github.com/Dmitri-Rudomanov/bentley-dist"
+                >
+                  Project Link
                 </a>
               </span>
               <span class="lines">..............</span>
@@ -175,13 +223,19 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                Working on official Bentley web-page in Ukraine
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://frosty-mcnulty-e4358a.netlify.app/">LUX-TRADER</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://wonderful-archimedes-28aea8.netlify.app/"
-                  >'BINARY' web-site
+                  href="https://github.com/Dmitri-Rudomanov/lux-trader"
+                  >Project Link
                 </a>
               </span>
               <span class="lines">..............</span>
@@ -190,13 +244,19 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+              <br />
+              <span class="projects-list-item-text">
+                Luxury Auctions Web-site with golden design.
+              </span>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://wonderful-archimedes-28aea8.netlify.app/">BINARY</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/prime-one/"
-                  >'Prime-One' web-site
+                  href="https://github.com/Dmitri-Rudomanov/binary-dist"
+                  >Project Link
                 </a>
               </span>
               <span class="lines">..............</span>
@@ -205,13 +265,20 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+                            <br />
+              <span class="projects-list-item-text">
+                Modern innovative designers web-page.
+              </span>
+            </li>
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/prime-one/">PRIME-ONE</a>
+                <span class="vertical-line"> |</span>
                 <a
                   target="_blank"
-                  href="https://dmitri-rudomanov.github.io/dist-bike/"
-                  >'BIKE' web-site
+                  href="https://github.com/Dmitri-Rudomanov/prime-one"
+                  >Project Link
                 </a>
               </span>
               <span class="lines">..............</span>
@@ -220,6 +287,31 @@
                   HTML5, CSS3, SCSS, JavaScript </span
                 >]</span
               >
+               <br />
+              <span class="projects-list-item-text">
+               Web-Site for very creative foodmaking organiztion 
+              </span>
+            </li>
+            <li class="projects-list-item">
+              <span class="projects-list-item-text">
+                <a target="_blank" href="https://dmitri-rudomanov.github.io/dist-bike/">BIKE</a>
+                <span class="vertical-line"> |</span>
+                <a
+                  target="_blank"
+                  href="https://github.com/Dmitri-Rudomanov/dist-bike"
+                  >Project Link
+                </a>
+              </span>
+              <span class="lines">..............</span>
+              <span
+                >[<span class="projects-list-item-text">
+                  HTML5, CSS3, SCSS </span
+                >]</span
+              >
+                             <br />
+              <span class="projects-list-item-text">
+              Simple but eyecatching landing page with vintage bikes.
+              </span>
             </li>
           </ol>
         </div>
@@ -229,28 +321,12 @@
           <h3 class="projects-work-education">Work Experience</h3>
           <!--Company 3-->
           <div>
-            <h4>Waiter <span class="Orange">Restaurant 'SHO PO CHEM'</span></h4>
-            <p class="work-date">
-              June 2019 - September 2019
-              <span class="vertical-line"> |</span> Country Ukraine
-            </p>
-
-            <ul class="work-list">
-              <li class="work-list-item">
-                <span class="work-list-item-text">
-                  Taking orders from visitors
-                </span>
-              </li>
-              <li class="work-list-item">
-                <span class="work-list-item-text">Customer service</span>
-              </li>
-            </ul>
-            <h4>
-              Web-site editor <span class="Orange">Svet-LED Company</span>
+             <h4>
+              Svet-LED Company <span class="Orange">Web-site editor</span>
             </h4>
             <p class="work-date">
               September 2019 - January 2019
-              <span class="vertical-line"> |</span> Country Ukraine
+              <span class="vertical-line"> |</span>  Ukraine
             </p>
 
             <ul class="work-list">
@@ -265,24 +341,41 @@
                 >
               </li>
             </ul>
+            <h4> Restaurant 'SHO PO CHEM' <span class="Orange">Waiter</span></h4>
+            <p class="work-date">
+              June 2019 - September 2019
+              <span class="vertical-line"> |</span>  Ukraine
+            </p>
+
+            <ul class="work-list">
+              <li class="work-list-item">
+                <span class="work-list-item-text">
+                  Taking orders from visitors
+                </span>
+              </li>
+              <li class="work-list-item">
+                <span class="work-list-item-text">Customer service</span>
+              </li>
+            </ul>
+           
           </div>
           <!--Education-->
           <div class="my-education">
             <h3 class="projects-work-education">Education</h3>
-            <h4><span class="Orange">PSACEA</span></h4>
-            <h5>International Economics and business</h5>
+            <h4><span >PSACEA</span></h4>
+            <h5 class="Orange">International Economics and business</h5>
             <p class="work-date">
               September 2018 - June 2023
-              <span class="vertical-line"> |</span> Country Ukraine
+              <span class="vertical-line"> |</span>  Ukraine
             </p>
           </div>
           <div class="my-education">
             <h3 class="projects-work-education">Additional Education</h3>
-            <h4><span class="Orange">GOIT</span></h4>
-            <h5>FULL STACK course online</h5>
+            <h4><span >GOIT</span></h4>
+            <h5 class="Orange">FULL STACK course online</h5>
             <p class="work-date">
               August 2021 - June 2022
-              <span class="vertical-line"> |</span> Country Ukraine
+              <span class="vertical-line"> |</span>  Ukraine
             </p>
           </div>
         </div>
