--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           <!--Company 3-->
           <div>
              <h4>
-              Svet-LED Company <span class="Orange">Web-site editor</span>
+              Svet-LED Company <span >Web-site editor</span>
             </h4>
             <p class="work-date">
               September 2019 - January 2019
@@ -341,7 +341,7 @@
                 >
               </li>
             </ul>
-            <h4> Restaurant 'SHO PO CHEM' <span class="Orange">Waiter</span></h4>
+            <h4> Restaurant 'SHO PO CHEM' <br><span style="display: inline-block;margin:10px 0 0 0;">Waiter</span></h4>
             <p class="work-date">
               June 2019 - September 2019
               <span class="vertical-line"> |</span>  Ukraine
@@ -363,7 +363,7 @@
           <div class="my-education">
             <h3 class="projects-work-education">Education</h3>
             <h4><span >PSACEA</span></h4>
-            <h5 class="Orange">International Economics and business</h5>
+            <h5 >International Economics and business</h5>
             <p class="work-date">
               September 2018 - June 2023
               <span class="vertical-line"> |</span>  Ukraine
@@ -372,7 +372,7 @@
           <div class="my-education">
             <h3 class="projects-work-education">Additional Education</h3>
             <h4><span >GOIT</span></h4>
-            <h5 class="Orange">FULL STACK course online</h5>
+            <h5 >FULL STACK course online</h5>
             <p class="work-date">
               August 2021 - June 2022
               <span class="vertical-line"> |</span>  Ukraine
@@ -387,6 +387,9 @@
         <!--Contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
+          <div style="margin:0 0 10px 0;">
+            Dnipro,Ukraine
+          </div>
           <div>
             <a class="contacts-section-link" href="tel:+380974335970"
               >+380974335970</a
