--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
           <ol class="projects-list">
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://wallet-history.netlify.app/login">WALLET</a>
+                <span class="vertical-line"> |</span>
+                <a
+                  target="_blank"
+                  href="https://github.com/Dmitri-Rudomanov/wallet-app-project"
+                  > Project Link</a
+                >
+              </span>
+              <span class="lines">............</span>
+              <span>[<span class="projects-list-item-text">
+              HTML5, CSS3, JavaScript,React,Redux,Node </span
+                >]</span
+              >
+              <br />
+              <span class="projects-list-item-text">
+                Team React-NodeJS project.Simple and usefull Wallet App
+              </span>
+            </li>
+            <li class="projects-list-item">
+              <span class="projects-list-item-text">
                 <a target="_blank" href="https://rds-phonebookapp-rds.netlify.app/">PHONEBOOK</a>
                 <span class="vertical-line"> |</span>
                 <a
@@ -446,6 +466,12 @@
               </li>
               <li class="Tech-skills-item">
                 <span class="Tech-skills-item-text">Redux</span>
+              </li>
+              <li class="Tech-skills-item">
+                <span class="Tech-skills-item-text">Vue</span>
+              </li>
+              <li class="Tech-skills-item">
+                <span class="Tech-skills-item-text">Node</span>
               </li>
             </ul>
           </div>
