--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
             </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
+                <a target="_blank" href="https://shimmering-cactus-12d2dc.netlify.app/">SHOP</a>
+                <span class="vertical-line"> |</span>
+                <a
+                  target="_blank"
+                  href="https://github.com/Dmitri-Rudomanov/vue-shop"
+                  > Project Link</a
+                >
+              </span>
+              <span class="lines">............</span>
+              <span>[<span class="projects-list-item-text">
+              HTML5, CSS3, JavaScript,Vue,Vuex </span
+                >]</span
+              >
+              <br />
+              <span class="projects-list-item-text">
+                Solo Vue project.Online shop with currency exchange
+              </span>
+            </li>
+            <li class="projects-list-item">
+              <span class="projects-list-item-text">
                 <a target="_blank" href="https://dmitri-rudomanov.github.io/group-6-team-project-JS/">FILMOTEKA</a>
                 <span class="vertical-line"> |</span>
                 <a
