--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             I’m a Frontend developer with experience in building websites and
             APP`s. Whether you’re trying to win work, list your services or even
             create a whole online store – I can help! I’m experienced in HTML
-            and CSS3, SCSS, JS and React. Regular communication is really
+            and CSS3, SCSS, JS , React ,Vue ,Node . Regular communication is really
             important to me, so let’s keep in touch!
           </p>
         </div>
