--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
         <div class="my-projects">
           <h3 class="projects-work-education">Project Experience</h3>
           <ol class="projects-list">
+              <li class="projects-list-item">
+              <span class="projects-list-item-text">
+                <a target="_blank" href="https://rds-dark-notes-rds.netlify.app/">DARK NOTES</a>
+                <span class="vertical-line"> |</span>
+                <a
+                  target="_blank"
+                  href="https://github.com/Dmitri-Rudomanov/Notes-react-ts"
+                  > Project Link</a
+                >
+              </span>
+              <span class="lines">............</span>
+              <span>[<span class="projects-list-item-text">
+              HTML5, CSS3, ,React,Redux,TypeScript </span
+                >]</span
+              >
+              <br />
+              <span class="projects-list-item-text">
+                React-TypeScript project.Simple and usefull Notes App
+              </span>
+            </li>
             <li class="projects-list-item">
               <span class="projects-list-item-text">
                 <a target="_blank" href="https://wallet-history.netlify.app/login">WALLET</a>
@@ -330,27 +350,6 @@
                <br />
               <span class="projects-list-item-text">
                Web-Site for very creative foodmaking organiztion 
-              </span>
-            </li>
-            <li class="projects-list-item">
-              <span class="projects-list-item-text">
-                <a target="_blank" href="https://dmitri-rudomanov.github.io/dist-bike/">BIKE</a>
-                <span class="vertical-line"> |</span>
-                <a
-                  target="_blank"
-                  href="https://github.com/Dmitri-Rudomanov/dist-bike"
-                  >Project Link
-                </a>
-              </span>
-              <span class="lines">..............</span>
-              <span
-                >[<span class="projects-list-item-text">
-                  HTML5, CSS3, SCSS </span
-                >]</span
-              >
-                             <br />
-              <span class="projects-list-item-text">
-              Simple but eyecatching landing page with vintage bikes.
               </span>
             </li>
           </ol>
