--- a/index.html
+++ b/index.html
@@ -360,6 +360,19 @@
           <h3 class="projects-work-education">Work Experience</h3>
           <!--Company 3-->
           <div>
+            <h4> DistributedLab <br><span style="display: inline-block;margin:10px 0 0 0;">FrontEnd developer</span></h4>
+            <p class="work-date">
+              June 2022 - September 2022
+              <span class="vertical-line"> |</span>  Ukraine
+            </p>
+
+            <ul class="work-list">
+              <li class="work-list-item">
+                <span class="work-list-item-text">
+                  Working on real estate company app
+                </span>
+              </li>
+            </ul>
              <h4>
               Svet-LED Company <span >Web-site editor</span>
             </h4>
