--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       </div>
       <!--Sidebar section-->
       <aside class="sidebar-section">
-        <img class="img" src="img/wrwe.jpg" alt="My photo" />
+        <img class="img" src="img/actual.JPG" alt="My photo" />
 
         <!--Contacts section-->
         <div class="contacts-section">
